Changed from absolute stock values to change rate.

--- a/ml/train_predictor.ipynb
+++ b/ml/train_predictor.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# About\n",
     "\n",
-    "Train predictor to predict the next day stock price by giving it N previous days of stock prices in combination with text sentiments for stock analysis posts for each day."
+    "Train predictor to predict the next day stock price by giving it N previous days of stock price changes in combination with text sentiments for stock analysis posts for each day."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import get_scorer\n",
+    "\n",
     "from torch import nn, tensor\n",
     "\n",
     "# Set device for torch.\n",
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,17 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'2020-01-01': 1.0, '2020-01-02': 1.0, '2020-01-03': 1.0, '2020-01-04': 0.0, '2020-01-05': 1.0, '2020-01-06': -1.0, '2020-01-07': -1.0, '2020-01-08': -1.0, '2020-01-09': 1.0, '2020-01-10': 1.0, '2020-01-11': -1.0, '2020-01-12': 1.0, '2020-01-13': 1.0, '2020-01-14': 1.0, '2020-01-15': 1.0, '2020-01-16': 1.0, '2020-01-17': 1.0, '2020-01-18': 0.0, '2020-01-19': 1.0, '2020-01-20': 1.0, '2020-01-21': 1.0, '2020-01-22': 1.0, '2020-01-23': 1.0, '2020-01-24': 1.0, '2020-01-25': -1.0, '2020-01-26': 1.0, '2020-01-27': -1.0, '2020-01-28': 1.0, '2020-01-29': 1.0, '2020-01-30': 1.0, '2020-01-31': 1.0, '2020-02-01': 1.0, '2020-02-02': -1.0, '2020-02-03': 1.0, '2020-02-04': 1.0, '2020-02-05': 1.0, '2020-02-06': 1.0, '2020-02-07': -1.0, '2020-02-08': 1.0, '2020-02-09': 1.0, '2020-02-10': 1.0, '2020-02-11': 1.0, '2020-02-12': 1.0, '2020-02-13': 1.0, '2020-02-14': 1.0, '2020-02-15': 1.0, '2020-02-16': 1.0, '2020-02-17': -1.0, '2020-02-18': 1.0, '2020-02-19': 1.0, '2020-02-20': 1.0, '2020-02-21': 1.0, '2020-02-22': 1.0, '2020-02-23': 1.0, '2020-02-24': -1.0, '2020-02-25': -1.0, '2020-02-26': 1.0, '2020-02-27': 1.0, '2020-02-28': -1.0, '2020-02-29': 1.0, '2020-03-01': 1.0, '2020-03-02': -1.0, '2020-03-03': -1.0, '2020-03-04': 1.0, '2020-03-05': -1.0, '2020-03-06': -1.0, '2020-03-07': 1.0, '2020-03-08': -1.0, '2020-03-09': -1.0, '2020-03-10': -1.0, '2020-03-11': -1.0, '2020-03-12': -1.0, '2020-03-13': -1.0, '2020-03-14': 1.0, '2020-03-15': 1.0, '2020-03-16': -1.0, '2020-03-17': -1.0, '2020-03-18': -1.0, '2020-03-19': -1.0, '2020-03-20': 1.0, '2020-03-21': 1.0, '2020-03-22': 1.0, '2020-03-23': -1.0, '2020-03-24': 1.0, '2020-03-25': 1.0, '2020-03-26': -1.0, '2020-03-27': -1.0, '2020-03-28': 1.0, '2020-03-29': 1.0, '2020-03-30': -1.0, '2020-03-31': 1.0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create map of sentiments\n",
     "posts = {}\n",
@@ -131,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +136,14 @@
       "Start: 2020-01-04\n",
       "Samples per stock: 87\n",
       "Sample set count: 1653\n",
-      "Row 0: [0.42 0.42 0.42 1.   1.   1.  ] 0.42\n"
+      "Train count: 1322\n",
+      "Test count: 331\n",
+      "[[ 1.          0.9808467   0.99596775 -1.         -1.          1.        ]\n",
+      " [ 1.          1.          1.          1.         -1.         -1.        ]\n",
+      " [ 1.          0.9725628   0.95125514  1.         -1.         -1.        ]\n",
+      " [ 1.          0.9928058   0.9223022  -1.          1.         -1.        ]\n",
+      " [ 1.          1.          1.          1.          1.          1.        ]]\n",
+      "[0.96874994 1.         0.9454174  0.88201445 1.        ]\n"
      ]
     }
    ],
@@ -170,21 +171,28 @@
     "        train_date_start = prediction_date - one_day*N\n",
     "        for i in range(0,N):\n",
     "            date_ = (train_date_start + one_day*i).isoformat()\n",
-    "            # stock\n",
-    "            X[i] = stock[date_]\n",
+    "            # Get stock change (day 0 == 1.0).\n",
+    "            if i==0:\n",
+    "                X[i] = 1.0\n",
+    "                base = stock[date_]\n",
+    "            else: X[i] = stock[date_] / base\n",
     "            # sentiment\n",
     "            X[N+i] = posts[date_]\n",
-    "        y_data.append(stock[prediction_date.isoformat()])\n",
+    "        y_data.append(stock[prediction_date.isoformat()]/base)\n",
     "        X_data.append(X)\n",
     "y_data = np.array(y_data, dtype=np.float32)\n",
     "X_data = np.array(X_data, dtype=np.float32)\n",
     "print('Sample set count:',len(X_data))\n",
-    "print('Row 0:',X_data[0],y_data[0])"
+    "X_train, X_test, y_train, y_test = train_test_split(X_data, y_data, test_size=0.2)\n",
+    "print('Train count:',len(X_train))\n",
+    "print('Test count:',len(X_test))\n",
+    "print(X_train[:5])\n",
+    "print(y_train[:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +211,7 @@
     "        self.fc = nn.Sequential(\n",
     "            nn.Linear(self.INPUT, self.INPUT*10),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(self.INPUT*7, self.INPUT*4),\n",
+    "            nn.Linear(self.INPUT*10, self.INPUT*4),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(self.INPUT*4, 1),\n",
     "            nn.ReLU()\n",
@@ -230,117 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0: loss=2849.645751953125\n",
-      "Epoch 1000: loss=2.930873155593872\n",
-      "Epoch 2000: loss=2.8580358028411865\n",
-      "Epoch 3000: loss=2.8031725883483887\n",
-      "Epoch 4000: loss=2.767005681991577\n",
-      "Epoch 5000: loss=2.7020082473754883\n",
-      "Epoch 6000: loss=2.615553855895996\n",
-      "Epoch 7000: loss=2.57550048828125\n",
-      "Epoch 8000: loss=2.551692247390747\n",
-      "Epoch 9000: loss=2.532294750213623\n",
-      "Epoch 10000: loss=2.5272183418273926\n",
-      "Epoch 11000: loss=2.508028268814087\n",
-      "Epoch 12000: loss=2.491166591644287\n",
-      "Epoch 13000: loss=2.4852395057678223\n",
-      "Epoch 14000: loss=2.4796905517578125\n",
-      "Epoch 15000: loss=2.4695403575897217\n",
-      "Epoch 16000: loss=2.46474289894104\n",
-      "Epoch 17000: loss=2.4591360092163086\n",
-      "Epoch 18000: loss=2.459909677505493\n",
-      "Epoch 19000: loss=2.4529013633728027\n",
-      "Epoch 20000: loss=2.4354171752929688\n",
-      "Epoch 21000: loss=2.409074544906616\n",
-      "Epoch 22000: loss=2.4051096439361572\n",
-      "Epoch 23000: loss=2.396021842956543\n",
-      "Epoch 24000: loss=2.391101121902466\n",
-      "Epoch 25000: loss=2.3813202381134033\n",
-      "Epoch 26000: loss=2.3784120082855225\n",
-      "Epoch 27000: loss=2.3748178482055664\n",
-      "Epoch 28000: loss=2.384648561477661\n",
-      "Epoch 29000: loss=2.369497060775757\n",
-      "Epoch 30000: loss=2.367882013320923\n",
-      "Epoch 31000: loss=2.3740408420562744\n",
-      "Epoch 32000: loss=2.366887331008911\n",
-      "Epoch 33000: loss=2.3645217418670654\n",
-      "Epoch 34000: loss=2.3639144897460938\n",
-      "Epoch 35000: loss=2.3794901371002197\n",
-      "Epoch 36000: loss=2.3611762523651123\n",
-      "Epoch 37000: loss=2.3593859672546387\n",
-      "Epoch 38000: loss=2.3624513149261475\n",
-      "Epoch 39000: loss=2.361255168914795\n",
-      "Epoch 40000: loss=2.3554985523223877\n",
-      "Epoch 41000: loss=2.3588597774505615\n",
-      "Epoch 42000: loss=2.354294538497925\n",
-      "Epoch 43000: loss=2.366546154022217\n",
-      "Epoch 44000: loss=2.3573672771453857\n",
-      "Epoch 45000: loss=2.3709959983825684\n",
-      "Epoch 46000: loss=2.3545501232147217\n",
-      "Epoch 47000: loss=2.3730549812316895\n",
-      "Epoch 48000: loss=2.35886812210083\n",
-      "Epoch 49000: loss=2.3528757095336914\n",
-      "Epoch 50000: loss=2.3537330627441406\n",
-      "Epoch 51000: loss=2.3510262966156006\n",
-      "Epoch 52000: loss=2.350492238998413\n",
-      "Epoch 53000: loss=2.350452184677124\n",
-      "Epoch 54000: loss=2.3485889434814453\n",
-      "Epoch 55000: loss=2.3690595626831055\n",
-      "Epoch 56000: loss=2.3476626873016357\n",
-      "Epoch 57000: loss=2.349778890609741\n",
-      "Epoch 58000: loss=2.3484790325164795\n",
-      "Epoch 59000: loss=2.3488409519195557\n",
-      "Epoch 60000: loss=2.3461246490478516\n",
-      "Epoch 61000: loss=2.345475912094116\n",
-      "Epoch 62000: loss=2.347744941711426\n",
-      "Epoch 63000: loss=2.3438806533813477\n",
-      "Epoch 64000: loss=2.3498873710632324\n",
-      "Epoch 65000: loss=2.345519542694092\n",
-      "Epoch 66000: loss=2.341644287109375\n",
-      "Epoch 67000: loss=2.351148843765259\n",
-      "Epoch 68000: loss=2.3405187129974365\n",
-      "Epoch 69000: loss=2.3408782482147217\n",
-      "Epoch 70000: loss=2.350482702255249\n",
-      "Epoch 71000: loss=2.3484294414520264\n",
-      "Epoch 72000: loss=2.3436572551727295\n",
-      "Epoch 73000: loss=2.339911937713623\n",
-      "Epoch 74000: loss=2.346050500869751\n",
-      "Epoch 75000: loss=2.3425614833831787\n",
-      "Epoch 76000: loss=2.3396167755126953\n",
-      "Epoch 77000: loss=2.3383820056915283\n",
-      "Epoch 78000: loss=2.3381426334381104\n",
-      "Epoch 79000: loss=2.3381974697113037\n",
-      "Epoch 80000: loss=2.348442554473877\n",
-      "Epoch 81000: loss=2.336867570877075\n",
-      "Epoch 82000: loss=2.3351433277130127\n",
-      "Epoch 83000: loss=2.343345880508423\n",
-      "Epoch 84000: loss=2.3403751850128174\n",
-      "Epoch 85000: loss=2.3674700260162354\n",
-      "Epoch 86000: loss=2.3606321811676025\n",
-      "Epoch 87000: loss=2.332704544067383\n",
-      "Epoch 88000: loss=2.332535982131958\n",
-      "Epoch 89000: loss=2.3415870666503906\n",
-      "Epoch 90000: loss=2.33227801322937\n",
-      "Epoch 91000: loss=2.3318002223968506\n",
-      "Epoch 92000: loss=2.337963104248047\n",
-      "Epoch 93000: loss=2.338106870651245\n",
-      "Epoch 94000: loss=2.3306005001068115\n",
-      "Epoch 95000: loss=2.3325459957122803\n",
-      "Epoch 96000: loss=2.332698106765747\n",
-      "Epoch 97000: loss=2.35270094871521\n",
-      "Epoch 98000: loss=2.3305766582489014\n",
-      "Epoch 99000: loss=2.3438236713409424\n",
-      "Last epoch 99999: loss=2.3331680297851562, time=160.5058467388153\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_file = f'{nn_name}.bin'\n",
     "predictor_model = PredictorNN().to(\n",
@@ -355,8 +255,8 @@
     "    passes = 100000\n",
     "    start_time = time()\n",
     "\n",
-    "    X_ = tensor(X_data, dtype=torch.float32, device=device)\n",
-    "    y_ = tensor(y_data, dtype=torch.float32, device=device)\n",
+    "    X_ = tensor(X_train, dtype=torch.float32, device=device)\n",
+    "    y_ = tensor(y_train, dtype=torch.float32, device=device)\n",
     "\n",
     "    # do training iterations\n",
     "    for epoch in range(passes):\n",
@@ -380,12 +280,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9775905407447469\n",
+      "X test: tensor([[ 1.0000,  1.0952,  1.0105, -1.0000, -1.0000, -1.0000],\n",
+      "        [ 1.0000,  1.0366,  1.0610,  1.0000, -1.0000, -1.0000],\n",
+      "        [ 1.0000,  0.9764,  0.9941, -1.0000, -1.0000,  1.0000],\n",
+      "        [ 1.0000,  0.9839,  0.9471, -1.0000,  1.0000,  1.0000],\n",
+      "        [ 1.0000,  1.0885,  1.0885, -1.0000, -1.0000,  1.0000]],\n",
+      "       device='cuda:0')\n",
+      "  Pred: [0.9677838  1.0771403  0.98829985 0.9388577  1.0797765 ]\n",
+      "  Test: [1.1162646 1.097561  0.9587195 0.9280191 1.0885341]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Test accuracy\n",
-    "print('Accuracy: ??')"
+    "# Test accuracy\n",
+    "from sklearn.metrics import r2_score\n",
+    "scorer = get_scorer('r2')\n",
+    "X_ = tensor(X_test, dtype=torch.float32, device=device)\n",
+    "y_pred = predictor_model(X_).cpu().detach().numpy().reshape(y_test.shape)\n",
+    "accuracy = 1.0 - np.absolute(y_pred - y_test).sum()/y_pred.shape[0]\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print('X test:', X_[:5])\n",
+    "print('  Pred:', y_pred[:5])\n",
+    "print('  Test:', y_test[:5])"
    ]
   }
  ],
