use spacy. currently broken.

--- a/ml/build_sentiment.ipynb
+++ b/ml/build_sentiment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,8 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import spacy"
    ]
   },
   {
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lang_proc = spacy.load(\"en_core_web_sm\")\n",
+    "import en_core_web_sm\n",
+    "lang_proc = en_core_web_sm.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +93,113 @@
     "        self.score += point\n",
     "        self.count += count\n",
     "    def get_score(self): return self.score\n",
-    "    def get_count(self): return self.count\n",
+    "    def get_count(self): return self.count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       S No.                                              Title  \\\n",
+      "0          1  SpiceJet to issue 6.4 crore warrants to promoters   \n",
+      "1          2                  MMTC Q2 net loss at Rs 10.4 crore   \n",
+      "2          3  Mid-cap funds can deliver more, stay put: Experts   \n",
+      "3          4             Mid caps now turn into market darlings   \n",
+      "4          5  Market seeing patience, if not conviction: Pra...   \n",
+      "...      ...                                                ...   \n",
+      "10748  10749       Negative on Chambal, Advanta: Mitesh Thacker   \n",
+      "10749  10750     Small, Mid-cap stocks may emerge outperformers   \n",
+      "10750  10751                      Rupee slips against US dollar   \n",
+      "10751  10752                       Rupee weak against US dollar   \n",
+      "10752  10753                Australia shares flat; energy drags   \n",
+      "\n",
+      "                                               Decisions  Words  \n",
+      "0                                {\"SpiceJet\": \"neutral\"}      8  \n",
+      "1                                    {\"MMTC\": \"neutral\"}      8  \n",
+      "2                          {\"Mid-cap funds\": \"positive\"}      8  \n",
+      "3                               {\"Mid caps\": \"positive\"}      7  \n",
+      "4                                  {\"Market\": \"neutral\"}      8  \n",
+      "...                                                  ...    ...  \n",
+      "10748     {\"Chambal\": \"negative\", \"Advanta\": \"negative\"}      6  \n",
+      "10749  {\"Small\": \"positive\", \"Mid-cap stocks\": \"posit...      6  \n",
+      "10750      {\"Rupee\": \"negative\", \"US dollar\": \"neutral\"}      5  \n",
+      "10751      {\"Rupee\": \"negative\", \"US dollar\": \"neutral\"}      5  \n",
+      "10752  {\"Australia shares\": \"neutral\", \"energy\": \"neu...      5  \n",
+      "\n",
+      "[10753 rows x 4 columns]\n",
+      "SpiceJet to issue 6.4 crore warrants to promoters\n",
+      "SpiceJet to issue 6.4 crore warrants to promoters\n",
+      "MMTC Q2 net loss at Rs 10.4 crore\n",
+      "MMTC Q2 net loss at Rs 10.4 crore\n",
+      "Mid-cap funds can deliver more, stay put: Experts\n",
+      "Mid-cap funds can deliver more, stay put: Experts\n",
+      "Mid caps now turn into market darlings\n",
+      "Mid caps now turn into market darlings\n",
+      "Market seeing patience, if not conviction: Prakash Diwan\n",
+      "Market seeing patience, if not conviction: Prakash Diwan\n",
+      "Infosys: Will the strong volume growth sustain?\n",
+      "Infosys: Will the strong volume growth sustain?\n",
+      "Hudco raises Rs 279 cr via tax-free bonds\n",
+      "Hudco raises Rs 279 cr via tax-free bonds\n",
+      "HOEC could retest 30-35 levels: Ashwani Gujral\n",
+      "HOEC could retest 30-35 levels: Ashwani Gujral\n",
+      "Gold shines on seasonal demand; Silver dull\n",
+      "Gold shines on seasonal demand; Silver dull\n",
+      "Genpact appoints Edward J Fitzpatrick as CFO\n",
+      "Genpact appoints Edward J Fitzpatrick as CFO\n",
+      "EXL beats profit estimates, cuts sales outlook\n",
+      "EXL beats profit estimates, cuts sales outlook\n",
+      "Wait and watch on Bharti Airtel: Vinay Khattar\n",
+      "Wait and watch on Bharti Airtel: Vinay Khattar\n",
+      "Would stick to banking: Girish Pai, Centrum Broking\n",
+      "Would stick to banking: Girish Pai, Centrum Broking\n",
+      "MSCI adds Aurobindo Pharma to India index\n",
+      "MSCI adds Aurobindo Pharma to India index\n",
+      "Ashok Leyland raises Rs 667 crore through QIP\n",
+      "Ashok Leyland raises Rs 667 crore through QIP\n",
+      "At Wipro, growth remains a mirage\n",
+      "At Wipro, growth remains a mirage\n",
+      "Why Chinese stocks leave US investors vulnerable\n",
+      "Why Chinese stocks leave US investors vulnerable\n",
+      "US stocks finish mixed amid more tech selling\n",
+      "US stocks finish mixed amid more tech selling\n",
+      "Opec reduces estimate on oil demand growth\n",
+      "Opec reduces estimate on oil demand growth\n",
+      "Oil prices mixed ahead of US supply report\n",
+      "Oil prices mixed ahead of US supply report\n",
+      "Makemytrip expands share sale plan\n",
+      "Makemytrip expands share sale plan\n",
+      "Gur closes quiet on some support\n",
+      "Gur closes quiet on some support\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test\n",
+    "'''\n",
+    "src_key ='AA'\n",
+    "df = pd.read_csv(join(*SOURCE_DATA_FOLDER, *SOURCE_DATA[src_key][0]), encoding=SOURCE_DATA[src_key][1])\n",
+    "print(df)\n",
+    "for idx,row in df.iterrows():\n",
+    "    text = row['Title']\n",
+    "    doc = lang_proc(text)\n",
+    "    print(doc.text)\n",
+    "    print(doc.text_with_ws)\n",
+    "    if idx>20: break\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Add sample words to 'dst' (WORDS) and 'txt' (TEXTS)\n",
     "def add_words(point, words:list[str], dst:dict[WStat], txt:list):\n",
     "    wmap = {}\n",
@@ -149,7 +267,8 @@
     "        # Read in as dataframe\n",
     "        df = pd.read_csv(join(*SOURCE_DATA_FOLDER, *item[0]), encoding=item[1])\n",
     "        # Process\n",
-    "        PROCESSORS[k](df, WORDS, TEXTS)"
+    "        PROCESSORS[k](df, WORDS, TEXTS)\n",
+    "        item[2] = True"
    ]
   },
   {
