--- a/ml/train_sentiment.ipynb
+++ b/ml/train_sentiment.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
     "SOURCE_DATA_FOLDER = ['..', 'datasets']\n",
     "# Load the sample data generated in 'build_sentiment.ipynb'.\n",
     "df_sentiment = pd.read_csv(join(*SOURCE_DATA_FOLDER, 'sentiment.csv'))\n",
-    "print('Rows:', df_sentiment.shape[0])\n"
+    "print('Rows:', df_sentiment.shape[0])"
    ]
   },
   {
